<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Login"
android:orientation="vertical"
android:gravity="center_horizontal">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center_horizontal">

<!--    Displays Logo-->
    <ImageView
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/logo" />

<!--    Creates the EditText so the user can input the username-->
    <EditText
        android:id="@+id/editText_username"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username" />

<!--    Creates the EditText so the user can input the password-->
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="10dp"/>

<!--    Creates the Login Button-->
    <Button
        android:id="@+id/button_login"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

<!--        Creates the TextView to display "Not Registered?"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"/>

<!--        Creates the TextView to display "Register"-->
        <TextView
            android:id="@+id/textView_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:paddingLeft="15dp"
            android:textStyle="bold"
            android:textColor="#9A0D0D"/>

    </LinearLayout>
</LinearLayout>
</ScrollView>
