<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginScreen"
android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="260dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:orientation="vertical"
            android:background="@drawable/login_background">

<!--            Displays the User's Picture-->
            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="35dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/profilepicture"/>

<!--            Creates the TextView to Welcome the user-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/welcome"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal">

<!--           Display the email picture-->
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_email_24" />

<!--            Creates the TextView to display the user's email-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="user@email.com"
                android:gravity="center_vertical"
                android:textSize="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp">

<!--                Displays the Music Library picture-->
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_library_music_24" />

<!--                Creates the TextView to Display 'Music Library"-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/music_library"
                    android:gravity="center_vertical"
                    android:textSize="25dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

<!--                    Displays the share picture-->
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_share_24" />

<!--                    Creates the TextView to display "Share"-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/share"
                        android:gravity="center_vertical"
                        android:textSize="25dp"/>

                </LinearLayout>


    </LinearLayout>

</LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>